Footer section and all ts elements 80% complete,including the About, Prices and Social sections.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="container-fluid">
         <div class="row">
             <a href="index.html">
                 <div class="col-md-4 logo"> </div>
@@ -39,7 +39,33 @@
     <section>
 
     </section>
-    <footer>
+    <footer class="container-fluid">
+        <div class="row">
+            <div class="col-sm-4">
+                <h6 class="uppercase general-styles">About us</h6>
+                <p class="inline-block font-style">Legendary rock band together 50+ years , with a back catalogue of original worldwide hits.
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <h6 class="uppercase general-styles">Pricelist & Schedule</h6>
+                <p class="inline-block font-style">Here is a list of our prices and availability throughout the year. Please download it here
+                    <a href="#" class="list-pdf"><i class="fa fa-download" aria-hidden="true"></i></a>
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <h6 class="uppercase general-styles">Social</h6>
+                <p class="inline-block font-style">
+                    <ul class="list-inline social links">
+                        <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fa fa-wikipedia-w"></i></a></li>
+                        
+                        
+                    </ul>
+                </p>
+            </div>
+        </div>
 
     </footer>
 
