Section area of the home page more or less complete, some styles may be changed later on. Footer section also had some changes and is close to its final form.Header section may need to have it's images croped but is also almost complete

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="col-xs-12 col-sm-12 col-md-4 bg-color-band-info section-column">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3 class="section-heading uppercase">Band Info</h3>
+                        <h4 class="section-heading-band-info uppercase">Band Info</h4>
                     </div>
                 </div>
                 <div class="band-info-item">
@@ -52,7 +52,7 @@
                         We are available for <strong>weddings, parties</strong> and private <strong>events</strong> all year round.
                     </p>
                     <p>
-                        We have a reputation to live up to and play our music with heart and soul. We are committed to ensuring that guests at our live shows have an entertaining and memorable experience.
+                        We have a reputation to live up to, and we play our music with heart and soul. We are committed to ensuring that guests at our live shows have an entertaining and memorable experience.
                     </p>
                     <p>So book us for a show, you will be glad you did!</p>
                 </div>
@@ -60,29 +60,21 @@
             <div class="col-xs-12 col-sm-12 col-md-8 bg-color-video section-column">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3 class="section-heading uppercase">Hit Songs</h3>
+                        <h5 class="section-heading-video uppercase">Some of our hit songs</h5>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-xs-12 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-6">
-                        <div class="row">
-                            <div id="video-container" class="col-xs-10 col-sm-10">
-                                <div>
-                      <iframe width="374" height="210" src="https://www.youtube.com/embed/MgTSfJEf_jM?rel=0" 
-                                    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                                </div>
-                            </div>
-                        </div>
+                <div class="row video-style">
+                    <div  class="col-xs-12 col-sm-6 col-md-6">
+                      <div class="video-container">
+                         <<iframe class="video-border" width="560" height="315" src="https://www.youtube.com/embed/MgTSfJEf_jM?rel=0&amp;showinfo=0"
+                         allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                      </div>
                     </div>
-                    <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-6">
-                        <div class="row">
-                            <div id="video-container" class="col-xs-10 col-sm-10">
-                                <div>
-                                    <iframe width="374" height="210" src="https://www.youtube.com/embed/HHjKzr6tLz0?rel=0&amp;start=20" 
-                                    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                                </div>
-                            </div>
-                        </div>
+                    <div  class="col-xs-12 col-sm-6 col-md-6">
+                      <div class="video-container">
+                         <iframe class="video-border" width="560" height="315" src="https://www.youtube.com/embed/Q3mgapAcVdU?rel=0&amp;showinfo=0"
+                         allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                      </div>
                     </div>
                 </div>
             </div>
@@ -93,7 +85,8 @@
             <div class="col-sm-4">
                 <h6 class="uppercase general-styles">About us</h6>
 
-                <p class="inline-block font-style">Legendary rock band together 50+ years , with a back catalogue of original worldwide hits.
+                <p class="inline-block font-style"><a class="wiki-link" href="http://bit.ly/2CqYnai" target="_blank">Legendary</a> rock band together 50+ years ,
+                with a back catalogue of original worldwide hits.
                 </p>
 
             </div>
@@ -111,9 +104,6 @@
                         <li><a href="http://bit.ly/2sZ9H9B" target="_blank"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="http://bit.ly/2GNhlpw" target="_blank"><i class="fa fa-youtube"></i></a></li>
                         <li><a href="http://bit.ly/2ClugRv" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="http://bit.ly/2CqYnai" target="_blank"><i class="fa fa-wikipedia-w"></i></a></li>
-
-
                     </ul>
                 </p>
             </div>
