Some minor style issues amended in each section of the homepage, ready to begin the Music page

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </p>
             </div>
             <div class="col-sm-4">
-                <h6 class="uppercase general-styles">Social</h6>
+                <h6 id="social" class="uppercase general-styles">Social</h6>
                 <p class="inline-block font-style">
                     <ul class="list-inline social-links">
                         <li><a href="http://bit.ly/2sZ9H9B" target="_blank"><i class="fa fa-facebook"></i></a></li>
