fixed an issue with the video borders in mobile first, some minor re-styling also applyed; all on home page

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     </div>
                 </div>
                 <div class="row video-style">
-                    <div  class="col-xs-12 col-sm-6 col-md-6">
-                      <div class="video-container">
+                    <div id="video-padding" class="col-xs-12 col-sm-6 col-md-6">
+                      <div class="video-container ">
                          <<iframe class="video-border" width="560" height="315" src="https://www.youtube.com/embed/MgTSfJEf_jM?rel=0&amp;showinfo=0"
                          allow="autoplay; encrypted-media" allowfullscreen></iframe>
                       </div>
