Began work on the music page, 60% completed.Added some audio and images, made some further minor style changesto home page.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale-1">
+    <title>The Animals</title>
 </head>
 
 <body>
@@ -15,14 +16,14 @@
             <a href="index.html">
                 <div class="col-md-4 logo"> </div>
             </a>
-            <div class="col-md-8 picture">
+            <div class="col-md-8 picture-main">
                 <div id="navbar" class="row">
                     <ul id="nav-list" class="list-inline clearfix">
                         <li class="col-xs-6 col-sm-3 ui-menu-color-home menuitem">
-                            <a href="#" class="hvr-rectangle-out"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                            <a href="index.html" class="hvr-rectangle-out"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-3 ui-menu-color-music menuitem">
-                            <a href="#" class="hvr-rectangle-out"><i class="fa fa-music" aria-hidden="true"></i><span>Music</span></a>
+                            <a href="music.html" class="hvr-rectangle-out"><i class="fa fa-music" aria-hidden="true"></i><span>Music</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-3 ui-menu-color-customers menuitem">
                             <a href="#" class="hvr-rectangle-out"><i class="fa fa-child" aria-hidden="true"></i><span>Customers</span></a>
@@ -66,14 +67,12 @@
                 <div class="row video-style">
                     <div id="video-padding" class="col-xs-12 col-sm-6 col-md-6">
                       <div class="video-container ">
-                         <<iframe class="video-border" width="560" height="315" src="https://www.youtube.com/embed/MgTSfJEf_jM?rel=0&amp;showinfo=0"
-                         allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                         <iframe class="video-border" width="560" height="315" src="https://www.youtube.com/embed/MgTSfJEf_jM?rel=0&amp;showinfo=0"></iframe>
                       </div>
                     </div>
                     <div  class="col-xs-12 col-sm-6 col-md-6">
                       <div class="video-container">
-                         <iframe class="video-border" width="560" height="315" src="https://www.youtube.com/embed/Q3mgapAcVdU?rel=0&amp;showinfo=0"
-                         allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                         <iframe class="video-border" width="560" height="315" src="https://www.youtube.com/embed/Q3mgapAcVdU?rel=0&amp;showinfo=0"></iframe>
                       </div>
                     </div>
                 </div>
@@ -99,13 +98,13 @@
             </div>
             <div class="col-sm-4">
                 <h6 id="social" class="uppercase general-styles">Social</h6>
-                <p class="inline-block font-style">
+                <div class="inline-block font-style">
                     <ul class="list-inline social-links">
                         <li><a href="http://bit.ly/2sZ9H9B" target="_blank"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="http://bit.ly/2GNhlpw" target="_blank"><i class="fa fa-youtube"></i></a></li>
                         <li><a href="http://bit.ly/2ClugRv" target="_blank"><i class="fa fa-twitter"></i></a></li>
                     </ul>
-                </p>
+                </div>
             </div>
         </div>
 
