Completed the Recent and New Songs section of the music page.Some minor restyling also done throughout th project

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
             <div class="col-md-8 picture-main">
                 <div id="navbar" class="row">
                     <ul id="nav-list" class="list-inline clearfix">
-                        <li class="col-xs-6 col-sm-3 ui-menu-color-home menuitem">
+                        <li id="border-home" class="col-xs-6 col-sm-3 ui-menu-color-home menuitem">
                             <a href="index.html" class="hvr-rectangle-out"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                         </li>
-                        <li class="col-xs-6 col-sm-3 ui-menu-color-music menuitem">
+                        <li id="border-music" class="col-xs-6 col-sm-3 ui-menu-color-music menuitem">
                             <a href="music.html" class="hvr-rectangle-out"><i class="fa fa-music" aria-hidden="true"></i><span>Music</span></a>
                         </li>
-                        <li class="col-xs-6 col-sm-3 ui-menu-color-customers menuitem">
+                        <li id="border-customers" class="col-xs-6 col-sm-3 ui-menu-color-customers menuitem">
                             <a href="#" class="hvr-rectangle-out"><i class="fa fa-child" aria-hidden="true"></i><span>Customers</span></a>
                         </li>
-                        <li class="col-xs-6 col-sm-3 ui-menu-color-contact menuitem">
+                        <li id="border-contact" class="col-xs-6 col-sm-3 ui-menu-color-contact menuitem">
                             <a href="#" class="hvr-rectangle-out"><i class="fa fa-commenting-o" aria-hidden="true"></i><span>Contact</span></a>
                         </li>
 
@@ -58,10 +58,10 @@
                     <p>So book us for a show, you will be glad you did!</p>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-8 bg-color-video section-column">
+            <div class="col-xs-12 col-sm-12 col-md-8 bg-color-home section-column">
                 <div class="row">
                     <div class="col-md-12">
-                        <h5 class="section-heading-video uppercase">Some of our hit songs</h5>
+                        <h5 class="section-heading-home uppercase">Some of our hit songs</h5>
                     </div>
                 </div>
                 <div class="row video-style">
@@ -84,8 +84,8 @@
             <div class="col-sm-4">
                 <h6 class="uppercase general-styles">About us</h6>
 
-                <p class="inline-block font-style"><a class="wiki-link" href="http://bit.ly/2CqYnai" target="_blank">Legendary</a> rock band together 50+ years ,
-                with a back catalogue of original worldwide hits.
+                <p class="inline-block font-style"><a class="wiki-link" href="http://bit.ly/2CqYnai" target="_blank">Legendary</a> rock and roll & rhythm and blues band, 50+ years experience,
+                with a back catalogue of original classic hits.
                 </p>
 
             </div>
