--- a/music.html
+++ b/music.html
@@ -45,23 +45,31 @@
                         <h4 class="section-heading-music-info uppercase">Recent & new songs</h4>
                     </div>
                 </div>
-                <div class="band-info-item">
-                    <p>
-                        We are <strong id="strong-color">The Animals</strong> an English rhythm and blues rock band, formed in the early <strong>1960s</strong>.
+                <div class="band-music-item">
+                    <a href="http://bit.ly/2tlWSGS" target="_blank"><img class="picture-music-info" 
+                    src="assets/images/eric-burdon-1.jpeg" alt="picture of Eric Burden" 
+                    style="width:160px;height:130px;" /></a>
+
+                    <p>Please click on this image to listen to the recent solo album <strong>(American Dream, 2017)</strong> from our lead singer <strong id="strong-color">Eric Burdon</strong>.
+            
                     </p>
                     <p>
-                        We are available for <strong>weddings, parties</strong> and private <strong>events</strong> all year round.
+                        <strong id="strong-color">The Animals</strong> are currently in studio, working on a new album to be released in <strong> 2018</strong>.
+                        We hope to update this section soon with some of our brand new material.
                     </p>
                     <p>
-                        We have a reputation to live up to, and we play our music with heart and soul. We are committed to ensuring that guests at our live shows have an entertaining and memorable experience.
+                        We will be playing the new music at our live events, so our customers will be the first to hear them!
                     </p>
-                    <p>So book us for a show, you will be glad you did!</p>
+                    <p>
+                        Make sure to check back regularly and get exclusive free access to our new songs.
+                    </p>
+
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-8 bg-color-music section-column">
                 <div class="row">
                     <div class="col-md-12">
-                        <h5 class="section-heading-music uppercase">Songs from out back catalogue</h5>
+                        <h5 class="section-heading-music uppercase">Songs from our back catalogue</h5>
                     </div>
                 </div>
                 <div class="">
@@ -77,50 +85,50 @@
                     </div>
                     <div class="col-xs-6 col-sm-4 col-md-4">
                         <figure>
-                            <img class="image-style" src="assets/images/a-blue.jpeg" alt="picture of Eric Burden" />
+                            <img class="image-style" src="assets/images/a-bw-yorange.jpeg" alt="picture of The Animals Band" />
                             <audio controls class="audio-bar">
-                             <source src="/assets/audio/02.Don't Let Me Be Misunderstood.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/02.Don't Let Me Be Misunderstood.mp3" type="audio/mpeg" >
+                             <source src="/assets/audio/19.It's My Life.mp3.ogg" type="audio/ogg" >
+                             <source src="/assets/audio/19.It's My Life.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
                     </div>
                     <div class="col-xs-6 col-sm-4 col-md-4">
                         <figure>
-                            <img class="image-style" src="assets/images/a-blue.jpeg" alt="picture of Eric Burden" />
+                            <img class="image-style" src="assets/images/a-army.jpeg" alt="picture of Eric Burden" />
                             <audio controls class="audio-bar">
-                             <source src="/assets/audio/02.Don't Let Me Be Misunderstood.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/02.Don't Let Me Be Misunderstood.mp3" type="audio/mpeg" >
+                             <source src="/assets/audio/01.Memphis Tennessee.ogg" type="audio/ogg" >
+                             <source src="/assets/audio/01.Memphis Tennessee.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
                     </div>
                     <div class="col-xs-6 col-sm-4 col-md-4">
                         <figure>
-                            <img class="image-style" src="assets/images/a-blue.jpeg" alt="picture of Eric Burden" />
+                            <img class="image-style" src="assets/images/a-trippy.jpeg" alt="picture of Eric Burden" />
                             <audio controls class="audio-bar">
-                             <source src="/assets/audio/02.Don't Let Me Be Misunderstood.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/02.Don't Let Me Be Misunderstood.mp3" type="audio/mpeg" >
+                             <source src="/assets/audio/16.I'm Crying.ogg" type="audio/ogg" >
+                             <source src="/assets/audio/16.I'm Crying.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
                     </div>
                     <div class="col-xs-6 col-sm-4 col-md-4">
                         <figure>
-                            <img class="image-style" src="assets/images/a-blue.jpeg" alt="picture of Eric Burden" />
+                            <img class="image-style" src="assets/images/a-logo.jpeg" alt="picture of Eric Burden" />
                             <audio controls class="audio-bar">
-                             <source src="/assets/audio/02.Don't Let Me Be Misunderstood.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/02.Don't Let Me Be Misunderstood.mp3" type="audio/mpeg" >
+                             <source src="/assets/audio/04.Roadrunner.ogg" type="audio/ogg" >
+                             <source src="/assets/audio/04.Roadrunner.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
                     </div>
                     <div class="col-xs-6 col-sm-4 col-md-4">
                         <figure>
-                            <img class="image-style" src="assets/images/a-blue.jpeg" alt="picture of Eric Burden" />
+                            <img class="image-style" src="assets/images/a-spare.jpeg" alt="picture of Eric Burden" />
                             <audio controls class="audio-bar">
-                             <source src="/assets/audio/02.Don't Let Me Be Misunderstood.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/02.Don't Let Me Be Misunderstood.mp3" type="audio/mpeg" >
+                             <source src="/assets/audio/07.Baby What's Wrong.ogg" type="audio/ogg" >
+                             <source src="/assets/audio/07.Baby What's Wrong.mp3" type="audio/mpeg" >
                             Your browser does not support the audio tag.
                             </audio>
                         </figure>
@@ -134,7 +142,7 @@
             <div class="col-sm-4">
                 <h6 class="uppercase general-styles">About us</h6>
 
-                <p class="inline-block font-style"><a class="wiki-link" href="http://bit.ly/2CqYnai" target="_blank">Legendary</a> rock band together 50+ years , with a back catalogue of original worldwide hits.
+                <p class="inline-block font-style"><a class="wiki-link" href="http://bit.ly/2CqYnai" target="_blank">Legendary</a> rock and roll & rhythm and blues band, 50+ years experience, with a back catalogue of original classic hits.
                 </p>
 
             </div>
