Music page 95% complete with just some media queries and small style issues left to complete.Ready to move on to the Customer page

--- a/music.html
+++ b/music.html
@@ -19,16 +19,16 @@
             <div class="col-md-8 picture-music">
                 <div id="navbar" class="row">
                     <ul id="nav-list" class="list-inline clearfix">
-                        <li class="col-xs-6 col-sm-3 ui-menu-color-home menuitem">
+                        <li id="border-home" class="col-xs-6 col-sm-3 ui-menu-color-home menuitem">
                             <a href="index.html" class="hvr-rectangle-out"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                         </li>
-                        <li class="col-xs-6 col-sm-3 ui-menu-color-music menuitem">
+                        <li id="border-music" class="col-xs-6 col-sm-3 ui-menu-color-music menuitem">
                             <a href="music.html" class="hvr-rectangle-out"><i class="fa fa-music" aria-hidden="true"></i><span>Music</span></a>
                         </li>
-                        <li class="col-xs-6 col-sm-3 ui-menu-color-customers menuitem">
+                        <li id="border-customers" class="col-xs-6 col-sm-3 ui-menu-color-customers menuitem">
                             <a href="#" class="hvr-rectangle-out"><i class="fa fa-child" aria-hidden="true"></i><span>Customers</span></a>
                         </li>
-                        <li class="col-xs-6 col-sm-3 ui-menu-color-contact menuitem">
+                        <li id="border-contact" class="col-xs-6 col-sm-3 ui-menu-color-contact menuitem">
                             <a href="#" class="hvr-rectangle-out"><i class="fa fa-commenting-o" aria-hidden="true"></i><span>Contact</span></a>
                         </li>
 
@@ -51,17 +51,16 @@
                     style="width:160px;height:130px;" /></a>
 
                     <p>Please click on this image to listen to the recent solo album <strong>(American Dream, 2017)</strong> from our lead singer <strong id="strong-color">Eric Burdon</strong>.
-            
+
                     </p>
                     <p>
-                        <strong id="strong-color">The Animals</strong> are currently in studio, working on a new album to be released in <strong> 2018</strong>.
-                        We hope to update this section soon with some of our brand new material.
+                        <strong id="strong-color">The Animals</strong> are currently in studio, working on a new album to be released in <strong> 2018</strong>. We hope to update this section soon with some of our brand new material.
                     </p>
                     <p>
-                        We will be playing the new music at our live events, so our customers will be the first to hear them!
+                        We will be playing our new songs at our <strong>live events</strong>, so our customers will be the first to hear them!
                     </p>
                     <p>
-                        Make sure to check back regularly and get exclusive free access to our new songs.
+                        Make sure to check back regularly to get exclusive <strong id="strong-color-free">free</strong> access to our new songs.
                     </p>
 
                 </div>
