Finished the main section of the customers page.Added various media queries to make the website smoother and more responsive.Some re-styling was done across the site.

--- a/customers.html
+++ b/customers.html
@@ -16,7 +16,7 @@
             <a href="index.html">
                 <div class="col-md-4 logo"> </div>
             </a>
-            <div class="col-md-8 picture-music">
+            <div class="col-md-8 picture-customers">
                 <div id="navbar" class="row">
                     <ul id="nav-list" class="list-inline clearfix">
                         <li id="border-home" class="col-xs-6 col-sm-3 ui-menu-color-home menuitem">
@@ -45,7 +45,7 @@
                         <h4 class="section-heading-music-info uppercase">Recent & new songs</h4>
                     </div>
                 </div>
-                <div class="band-music-item">
+                <div class="band-customers-item">
                     <a href="http://bit.ly/2tlWSGS" target="_blank"><img class="picture-music-info" 
                     src="assets/images/eric-burdon-1.jpeg" alt="picture of Eric Burden" 
                     style="width:160px;height:130px;" /></a>
@@ -65,73 +65,58 @@
 
                 </div>
             </div>
-            <div   class="col-xs-12 col-sm-12 col-md-8 bg-color-music section-column">
+            <div id="wrapper-customers-section" class="col-xs-12 col-sm-12 col-md-8 bg-color-customers section-column">
                 <div class="row">
                     <div class="col-md-12">
-                        <h5 class="section-heading-music uppercase">Songs from our back catalogue</h5>
+                        <h5 class="section-heading-customers uppercase">Some of our famous customers</h5>
                     </div>
                 </div>
-                <div class="row">
-                    <div id="padding-left-none" class="col-xs-6 col-sm-4 col-md-4">
-                        <figure>
-                            <img class="image-style" src="assets/images/a-blue.jpeg" alt="Picture of Eric Burden" />
-                            <audio controls class="audio-bar">
-                             <source src="/assets/audio/02.Don't Let Me Be Misunderstood.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/02.Don't Let Me Be Misunderstood.mp3" type="audio/mpeg" >
-                            Your browser does not support the audio tag.
-                            </audio>
-                        </figure>
+                <div>
+                    <div class="col-xs-12 col-sm-6 col-md-6">
+                        <div class="media">
+                            <div class="media-left">
+                                <img src="assets/images/sam-harris.jpg" alt="Image of Sam Harris" class="img-circle media-object" height=100 width=100>
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="band-customers-item">
+                                    <p>I want to thank The Animals for playing a live show at our neuroscience event in San Francisco on New Year's Eve! They were absolutely phenomenal!!
+
+                                    </p>
+                                    <p><strong>Sam Harris</strong><a class="social-links-quotes" href="https://twitter.com/SamHarrisOrg
+                                       " target="_blank"><i class="fa fa-twitter"></i></a></p>
+                                </blockquote>
+                            </div>
+                        </div>
                     </div>
-                    <div id="padding-left-none" class="col-xs-6 col-sm-4 col-md-4 hidden-xs">
-                        <figure>
-                            <img class="image-style" src="assets/images/a-bw-yorange.jpeg" alt="Picture of The Animals Band" />
-                            <audio controls class="audio-bar">
-                             <source src="/assets/audio/19.It's My Life.mp3.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/19.It's My Life.mp3" type="audio/mpeg" >
-                            Your browser does not support the audio tag.
-                            </audio>
-                        </figure>
+                    <div class="col-xs-12 col-sm-6 col-md-6 hidden-sm">
+                        <div class="media">
+                            <div class="media-left">
+                                <img src="assets/images/gabor-mate.jpg" alt="Image of Gabor Mate" class="img-circle media-object" height=100 width=100>
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="band-customers-item">
+                                    <p>I would like to thank The Animals for playing at my 70th birthday party. Eric & the guys were so interactive, our guests loved it, and what a fabulous singer! </p>
+                                    <p><strong>Gabor Mate</strong><a class="social-links-quotes" href="https://twitter.com/DrMate
+                                       " target="_blank"><i class="fa fa-twitter"></i></a></p>
+                                </blockquote>
+                            </div>
+                        </div>
                     </div>
-                    <div id="padding-left-none" class="col-xs-6 col-sm-4 col-md-4">
-                        <figure>
-                            <img class="image-style" src="assets/images/a-army.jpeg" alt="Picture of Eric Burden" />
-                            <audio controls class="audio-bar">
-                             <source src="/assets/audio/01.Memphis Tennessee.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/01.Memphis Tennessee.mp3" type="audio/mpeg" >
-                            Your browser does not support the audio tag.
-                            </audio>
-                        </figure>
+                    <div class="col-xs-12 col-sm-6 col-md-6 hidden-xs">
+                        <div class="media">
+                            <div class="media-left">
+                                <img src="assets/images/jordan-peterson.jpg" alt="Image of Jordan Peterson" class="img-circle media-object" height=100 width=100>
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="band-customers-item">
+                                    <p>Absolutely amazing, they had everyone on the dance floor all night, great fun had by all, we really enjoyed the crowd participation bits. Great band, great songs.</p>
+                                    <p><strong>Jordan Peterson</strong><a class="social-links-quotes" href="https://twitter.com/jordanbpeterson
+                                       " target="_blank"><i class="fa fa-twitter"></i></a></p>
+                                </blockquote>
+                            </div>
+                        </div>
                     </div>
-                    <div id="padding-left-none" class="col-xs-6 col-sm-4 col-md-4 hidden-xs">
-                        <figure>
-                            <img class="image-style" src="assets/images/a-trippy.jpeg" alt="Picture of Eric Burden" />
-                            <audio controls class="audio-bar">
-                             <source src="/assets/audio/16.I'm Crying.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/16.I'm Crying.mp3" type="audio/mpeg" >
-                            Your browser does not support the audio tag.
-                            </audio>
-                        </figure>
-                    </div>
-                    <div id="padding-left-none" class="col-xs-6 col-sm-4 col-md-4">
-                        <figure>
-                            <img class="image-style" src="assets/images/a-logo.jpeg" alt="Picture of Eric Burden" />
-                            <audio controls class="audio-bar">
-                             <source src="/assets/audio/04.Roadrunner.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/04.Roadrunner.mp3" type="audio/mpeg" >
-                            Your browser does not support the audio tag.
-                            </audio>
-                        </figure>
-                    </div>
-                    <div id="padding-left-none" class="col-xs-6 col-sm-4 col-md-4">
-                        <figure>
-                            <img class="image-style" src="assets/images/a-spare.jpeg" alt="Picture of Eric Burden" />
-                            <audio controls class="audio-bar">
-                             <source src="/assets/audio/07.Baby What's Wrong.ogg" type="audio/ogg" >
-                             <source src="/assets/audio/07.Baby What's Wrong.mp3" type="audio/mpeg" >
-                            Your browser does not support the audio tag.
-                            </audio>
-                        </figure>
-                    </div>
+                    
                 </div>
             </div>
         </div>
