--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                             <a href="music.html" class="hvr-rectangle-out"><i class="fa fa-music" aria-hidden="true"></i><span>Music</span></a>
                         </li>
                         <li id="border-customers" class="col-xs-6 col-sm-3 ui-menu-color-customers menuitem">
-                            <a href="#" class="hvr-rectangle-out"><i class="fa fa-child" aria-hidden="true"></i><span>Customers</span></a>
+                            <a href="customers.html" class="hvr-rectangle-out"><i class="fa fa-child" aria-hidden="true"></i><span>Customers</span></a>
                         </li>
                         <li id="border-contact" class="col-xs-6 col-sm-3 ui-menu-color-contact menuitem">
-                            <a href="#" class="hvr-rectangle-out"><i class="fa fa-commenting-o" aria-hidden="true"></i><span>Contact</span></a>
+                            <a href="contact.html" class="hvr-rectangle-out"><i class="fa fa-commenting-o" aria-hidden="true"></i><span>Contact</span></a>
                         </li>
 
                     </ul>
