--- a/customers.html
+++ b/customers.html
@@ -39,30 +39,24 @@
     </header>
     <section class="container-fluid">
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-4 bg-color-music-info section-column">
+            <div class="col-xs-12 col-sm-12 col-md-4 bg-color-customers-info section-column">
                 <div class="row">
                     <div class="col-md-12">
-                        <h4 class="section-heading-music-info uppercase">Recent & new songs</h4>
+                        <h4 class="section-heading-customers-info uppercase">We love animals</h4>
                     </div>
                 </div>
                 <div class="band-customers-item">
-                    <a href="http://bit.ly/2tlWSGS" target="_blank"><img class="picture-music-info" 
-                    src="assets/images/eric-burdon-1.jpeg" alt="picture of Eric Burden" 
-                    style="width:160px;height:130px;" /></a>
-
-                    <p>Please click on this image to listen to the recent solo album <strong>(American Dream, 2017)</strong> from our lead singer <strong id="strong-color">Eric Burdon</strong>.
-
+                    <p>Over the years we have worked with many wonderful <strong>animal welfare</strong> organisations, through regular <strong>donations</strong> and <strong>advocating</strong> on their behalf.
+                        <a href="https://www.worldanimalprotection.org/" target="_blank"><img class="picture-customers-info" 
+                    src="assets/images/happy-wolf.jpeg" alt="picture of a happy wolf" 
+                     /></a> You can visit one of our favorite animal charities by clicking on this image.
                     </p>
                     <p>
-                        <strong id="strong-color">The Animals</strong> are currently in studio, working on a new album to be released in <strong> 2018</strong>. We hope to update this section soon with some of our brand new material.
+                        Our commitment to animal welfare continues to the present day. <strong id="strong-color">The Animals</strong> donate <strong>20% of all our profits</strong> to worthwhile projects, improving the lifes of animals across the globe.
                     </p>
                     <p>
-                        We will be playing our new songs at our <strong>live events</strong>, so our customers will be the first to hear them!
+                        When you <strong>book us</strong> for an event you also support and <strong>improve the lifes of animals</strong> being cared for by the organisations we support!!
                     </p>
-                    <p>
-                        Make sure to check back regularly to get exclusive <strong id="strong-color-free">free</strong> access to our new songs.
-                    </p>
-
                 </div>
             </div>
             <div id="wrapper-customers-section" class="col-xs-12 col-sm-12 col-md-8 bg-color-customers section-column">
@@ -116,7 +110,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                 </div>
             </div>
         </div>
