--- a/music.html
+++ b/music.html
@@ -48,7 +48,7 @@
                 <div class="band-music-item">
                     <a href="http://bit.ly/2tlWSGS" target="_blank"><img class="picture-music-info" 
                     src="assets/images/eric-burdon-1.jpeg" alt="picture of Eric Burden" 
-                    style="width:160px;height:130px;" /></a>
+                    style="width:167px;height:130px;" /></a>
 
                     <p>Please click on this image to listen to the recent solo album <strong>(American Dream, 2017)</strong> from our lead singer <strong id="strong-color">Eric Burdon</strong>.
 
@@ -71,7 +71,7 @@
                         <h5 class="section-heading-music uppercase">Songs from our back catalogue</h5>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row audio-styles">
                     <div id="padding-left-none" class="col-xs-6 col-sm-4 col-md-4">
                         <figure>
                             <img class="image-style" src="assets/images/a-blue.jpeg" alt="Picture of Eric Burden" />
@@ -84,7 +84,7 @@
                     </div>
                     <div id="padding-left-none" class="col-xs-6 col-sm-4 col-md-4 hidden-xs">
                         <figure>
-                            <img class="image-style" src="assets/images/a-bw-yorange.jpeg" alt="Picture of The Animals Band" />
+                            <img class="image-style" src="assets/images/a-classy.jpg" alt="Picture of The Animals Band" />
                             <audio controls class="audio-bar">
                              <source src="/assets/audio/19.It's My Life.mp3.ogg" type="audio/ogg" >
                              <source src="/assets/audio/19.It's My Life.mp3" type="audio/mpeg" >
@@ -104,7 +104,7 @@
                     </div>
                     <div id="padding-left-none" class="col-xs-6 col-sm-4 col-md-4 hidden-xs">
                         <figure>
-                            <img class="image-style" src="assets/images/a-trippy.jpeg" alt="Picture of Eric Burden" />
+                            <img class="image-style" src="assets/images/a-delish.jpg" alt="Picture of Eric Burden" />
                             <audio controls class="audio-bar">
                              <source src="/assets/audio/16.I'm Crying.ogg" type="audio/ogg" >
                              <source src="/assets/audio/16.I'm Crying.mp3" type="audio/mpeg" >
@@ -114,7 +114,7 @@
                     </div>
                     <div id="padding-left-none" class="col-xs-6 col-sm-4 col-md-4">
                         <figure>
-                            <img class="image-style" src="assets/images/a-logo.jpeg" alt="Picture of Eric Burden" />
+                            <img class="image-style" src="assets/images/a-portrait.jpeg" alt="Picture of Eric Burden" />
                             <audio controls class="audio-bar">
                              <source src="/assets/audio/04.Roadrunner.ogg" type="audio/ogg" >
                              <source src="/assets/audio/04.Roadrunner.mp3" type="audio/mpeg" >
@@ -124,7 +124,7 @@
                     </div>
                     <div id="padding-left-none" class="col-xs-6 col-sm-4 col-md-4">
                         <figure>
-                            <img class="image-style" src="assets/images/a-spare.jpeg" alt="Picture of Eric Burden" />
+                            <img class="image-style" src="assets/images/a-jail.jpg" alt="Picture of Eric Burden" />
                             <audio controls class="audio-bar">
                              <source src="/assets/audio/07.Baby What's Wrong.ogg" type="audio/ogg" >
                              <source src="/assets/audio/07.Baby What's Wrong.mp3" type="audio/mpeg" >
