Finished contact page and made some minor changes throughout the project.some further CSS clean up is needed and a price list needs to be added for download from the footer.Close to full completion

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             <a href="index.html">
                 <div class="col-md-4 logo"> </div>
             </a>
-            <div class="col-md-8 picture-main">
+            <div class="col-md-8 picture-contact">
                 <div id="navbar" class="row">
                     <ul id="nav-list" class="list-inline clearfix">
                         <li id="border-home" class="col-xs-6 col-sm-3 ui-menu-color-home menuitem">
@@ -39,10 +39,13 @@
     </header>
     <section class="container-fluid">
         <div class="row">
-
-            <div class="col-xs-12 col-sm-12 col-md-4 picture-contact-info"> </div>
-
-
+           <div class="col-xs-12 col-sm-12 col-md-4 bg-color-contact-info section-column">
+                <div>
+                    <p>
+                <img class="picture-contact-info" src="assets/images/a-contact-image.jpg" alt="Rock and Roll Hall of Fame logo." 
+                    </p>
+                </div>
+            </div>
             <div class="col-xs-12 col-sm-12 col-md-8 bg-color-contact section-column">
                 <div class="row contact-styles">
                     <div class="section-heading-contact">
@@ -53,7 +56,7 @@
                         <form>
                             <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
                             <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
-                            <textarea rows="5" name="projectsummary" class="form-control" id="projectsummary" placeholder="Project Description" required></textarea>
+                            <textarea rows="5" name="projectsummary" class="form-control" id="projectsummary" placeholder="Event Description" required></textarea>
                             <button type="submit" class="btn btn-secondary center-block">Send Event Request</button>
                         </form>
                     </div>
