--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 </div>
                 <div class="band-info-item">
                     <p>
-                        We are <strong id="strong-color">The Animals</strong> an English rhythm and blues rock band, formed in the early <strong>1960s</strong>.
+                        We are <strong id="strong-color">The Animals</strong>, an English rhythm and blues rock band, formed in the early <strong>1960s</strong>.
                     </p>
                     <p>
-                        We are available for <strong>weddings, parties</strong> and private <strong>events</strong> all year round.
+                        We are available for <strong>weddings, parties</strong> and private <strong>events</strong>, all year round.
                     </p>
                     <p>
                         We have a reputation to live up to, and we play our music with heart and soul. We are committed to ensuring that guests at our live shows have an entertaining and memorable experience.
