--- a/customers.html
+++ b/customers.html
@@ -59,7 +59,7 @@
                     </p>
                 </div>
             </div>
-            <div id="wrapper-customers-section" class="col-xs-12 col-sm-12 col-md-8 bg-color-customers section-column">
+            <div class="col-xs-12 col-sm-12 col-md-8 bg-color-customers section-column">
                 <div class="row">
                     <div class="col-md-12">
                         <h5 class="section-heading-customers uppercase">Some of our famous customers</h5>
